minitrace-macro/tests/ui/err/trace-interleaved.stderr
error: expected string literal
 --> tests/ui/err/trace-interleaved.rs:4:9
  |
4 | #[trace(struct)]
  |         ^^^^^^
